--- a/index.html
+++ b/index.html
@@ -104,25 +104,33 @@
         </div>
     </div>
     <div>
-        <div></div>
-        <h2>Grab Your Software With Amazing Features</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
-        </p>
-        <dl>
-            <dt>01. Clean Design</dt>
-            <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+        <img src="" alt="">
+        <div>
+            <div></div>
+            <h2>Grab Your Software With Amazing Features</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex
                 ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
-            </dd>
-            <dt>02. Easy To Customize</dt>
-            <dt>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
+            </p>
+            <dl>
+                <dt>01. Clean Design</dt>
+                <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex
+                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
                 </dd>
-        </dl>
+                <dt>02. Easy To Customize</dt>
+                <dt>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
+                    </dd>
+            </dl>
+        </div>
     </div>
     <div>
         <div>
@@ -156,22 +164,140 @@
         </div>
     </div>
     <div>
-        <div></div>
-        <h2>Limpon Is Suitable For Anytype LandingPage</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
-        </p>
-        <button type="button">get started now</button>
+        <div>
+            <img src="img/stat.png" alt="Video">
+            <div>
+                <div></div>
+                <h2>Limpon Is Suitable For Anytype LandingPage</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
+                </p>
+                <a href="">get started now</a>
+            </div>
+        </div>
     </div>
     <div>
-        <div></div>
-        <h2>Easy To Etid & Very Easily Control</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
-        </p>
-        <button type="button">learn more</button>
+        <div>
+            <div>
+                <div></div>
+                <h2>Easy To Etid & Very Easily Control</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum.
+                </p>
+                <a href="">learn more</a>
+            </div>
+            <img src="img/stat2.png" alt="video">
+        </div>
+    </div>
+    <div class="page-screen">
+        <h2><span>screen preview</span>Screenshot With Details</h2>
+        <img src="img/stat3.png" alt="video">
+    </div>
+    <div class="testimonials">
+        <div>
+            <h2><span>testimonials</span>Our Happy Clients</h2>
+            <div class="coments">
+                <div>
+                    <p>It is a long established fact that a read her will be distracted by the readable
+                        content of a page when looking.
+                    </p>
+                    <img src="img/client.png" alt="">
+                    <p class="name-client">Rolin B. Mirano<span>ceo,uihub</span></p>
+                </div>
+                <div>
+                    <p>It is a long established fact that a read her will be distracted by the readable
+                        content of a page when looking.
+                    </p>
+                    <img src="img/client.png" alt="">
+                    <p class="name-client">Rolin B. Mirano<span>ceo,uihub</span></p>
+                </div>
+                <div>
+                    <p>It is a long established fact that a read her will be distracted by the readable
+                        content of a page when looking.
+                    </p>
+                    <img src="img/client.png" alt="">
+                    <p class="name-client">Rolin B. Mirano<span>ceo,uihub</span></p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="plans">
+        <div class="box-plans">
+            <h2><span>our plans</span>Pricing Plans</h2>
+            <div class="flex-plans">
+                <div class="first-column">
+                    <h3>Free
+                        <span>starter</span>
+                        <ul>
+                            <li>Unlimited users Active</li>
+                            <li>1 GB Bandwidth Speed</li>
+                            <li>256 MB Memory Card</li>
+                            <li>Free Domain Name</li>
+                            <li>Free Hosting Name</li>
+                            <li>24x7 Online Support</li>
+                        </ul>
+                        <a href="">choose plan</a>
+                    </h3>
+                </div>
+                <div class="second-column">
+                    <h3>$90
+                        <span>/mo</span>
+                        <span>starter</span>
+                        <ul>
+                                <li>Unlimited users Active</li>
+                                <li>1 GB Bandwidth Speed</li>
+                                <li>256 MB Memory Card</li>
+                                <li>Free Domain Name</li>
+                                <li>Free Hosting Name</li>
+                                <li>24x7 Online Support</li>
+                            </ul>
+                        <a href="">choose plan</a>
+                    </h3>
+                </div>
+                <div class="third-column">
+                    <h3>$350
+                        <span>/mo</span>
+                        <span>starter</span>
+                        <ul>
+                                <li>Unlimited users Active</li>
+                                <li>1 GB Bandwidth Speed</li>
+                                <li>256 MB Memory Card</li>
+                                <li>Free Domain Name</li>
+                                <li>Free Hosting Name</li>
+                                <li>24x7 Online Support</li>
+                            </ul>
+                        <a href="">choose plan</a>
+                    </h3>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="team">
+        <div>
+            <h2><span>angels</span>Our Team</h2>
+            <div class="flex-team">
+               <div>
+                   <img src="" alt="">
+                       <p><span></span></p>
+               </div>
+               <div>
+                   <img src="" alt="">
+                       <p><span></span></p>
+               </div>
+               <div>
+                   <img src="" alt="">
+                       <p><span></span></p>
+               </div>
+            </div>
+        </div>
     </div>
 
 </body>
