--- a/index.html
+++ b/index.html
@@ -6,79 +6,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-touch-icon-57x57.png"
+        data-mce-href="img/favicon/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-touch-icon-60x60.png"
+        data-mce-href="img/favicon/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png"
+        data-mce-href="img/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-touch-icon-76x76.png"
+        data-mce-href="img/favicon/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png"
+        data-mce-href="img/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-touch-icon-120x120.png"
+        data-mce-href="img/favicon/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-touch-icon-144x144.png"
+        data-mce-href="img/favicon/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-touch-icon-152x152.png"
+        data-mce-href="img/favicon/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png"
+        data-mce-href="img/favicon/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="img/favicon/favicon-32x32.png" sizes="32x32"
+        data-mce-href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="img/favicon/android-chrome-192x192.png" sizes="192x192"
+        data-mce-href="img/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" href="img/favicon/favicon-96x96.png" sizes="96x96"
+        data-mce-href="img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" href="img/favicon/favicon-16x16.png" sizes="16x16"
+        data-mce-href="img/favicon/favicon-16x16.png">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href=" text-transform: uppercase;">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<title>Limton</title>
 
 <body>
-    <div>
+    <div class="page-header">
         <div>
-            <a href=""></a>
-            <ul>
+            <a href=""><img src="img/logo.png" alt="logo"></a>
+            <ul class="nav">
                 <li>Home</li>
                 <li> Features</li>
                 <li> Video</li>
                 <li>Screens</li>
                 <li>Pricing</li>
                 <li>team</li>
-                <li><a href="">Free Trail</a></li>
+                <li><a href="" class="btn-free">Free Trail</a></li>
             </ul>
         </div>
         <h1>Best Software Landingpage</h1>
         <div>
-            <a href="">get started now</a>
-            <a href="">learn more</a>
+            <a href="" class="btn-started">get started now</a>
+            <a href="btn-learn">learn more</a>
         </div>
     </div>
-    <div>
+    <div class="page-company">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><img src="img/token.png" alt="sponsor"></li>
+            <li><img src="img/magneto.png" alt="sponsor"></li>
+            <li><img src="img/boohoo.png" alt="sponsor"></li>
+            <li><img src="img/fractal.png" alt="sponsor"></li>
         </ul>
     </div>
-    <div>
-        <div>
-            <h2>
-                <span>Features</span>Best Features Ever Seen
-            </h2>
-            <div>
+    <div class="page-grid">
+        <div class="grid">
+            <h2><span>Features</span>Best Features Ever Seen</h2>
+            <div class="grid-item">
                 <div></div>
                 <h3>Well Documented</h3>
                 <p>Lorem ipsum dolor sit amet,conse ctetur adipisicing elit,sed don eiusmod tempor incididunt.</p>
                 <a href="">Read More</a>
             </div>
-            <div>
+            <div class="grid-item">
                 <div></div>
                 <h3>Highly Customizeable</h3>
                 <p>Lorem ipsum dolor sit amet,conse ctetur adipisicing elit,sed don eiusmod tempor incididunt.</p>
                 <a href="">Read More</a>
             </div>
-            <div>
+            <div class="grid-item">
                 <div></div>
                 <h3>Mobile Friednly Design</h3>
                 <p>Lorem ipsum dolor sit amet,conse ctetur adipisicing elit,sed don eiusmod tempor incididunt.</p>
                 <a href="">Read More</a>
             </div>
-            <div>
+            <div class="grid-item">
                 <div></div>
                 <h3>Easy To Edit</h3>
                 <p>Lorem ipsum dolor sit amet,conse ctetur adipisicing elit,sed don eiusmod tempor incididunt.</p>
                 <a href="">Read More</a>
             </div>
-            <div>
+            <div class="grid-item">
                 <div></div>
                 <h3>Responsive Design</h3>
                 <p>Lorem ipsum dolor sit amet,conse ctetur adipisicing elit,sed don eiusmod tempor incididunt.</p>
                 <a href="">Read More</a>
             </div>
-            <div>
+            <div class="grid-item">
                 <div></div>
                 <h3>24/7 Online Support</h3>
                 <p>Lorem ipsum dolor sit amet,conse ctetur adipisicing elit,sed don eiusmod tempor incididunt.</p>
                 <a href="">Read More</a>
             </div>
-            <div>
+            <div class="grid-item">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -88,9 +114,9 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="page-subscribe">
         <div>
-            <div>
+            <div class="subscribe">
                 <h2>
                     <span>Subscribe</span>Signup For A Trail
                     <p>Create your free account now & get 30 days free
@@ -103,7 +129,7 @@
             <img src="img/robot.png" alt="Robot">
         </div>
     </div>
-    <div>
+    <div class="page-software">
         <img src="" alt="">
         <div>
             <div></div>
@@ -132,7 +158,7 @@
             </dl>
         </div>
     </div>
-    <div>
+    <div class="stat">
         <div>
             <h2><span>FUn Facts</span>Some Fun Facts About Dashboard</h2>
             <ul>
@@ -143,9 +169,8 @@
             </ul>
         </div>
     </div>
-    <div>
+    <div class="page-app">
         <div>
-
             <div>
                 <h2>Meet With Future Landingpage</h2>
                 <p>
@@ -154,16 +179,16 @@
                     laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
                     voluptate velit esse cillum.
                 </p>
-                <p>Available Now</p>
+                <p class="avilable">Available Now</p>
                 <ul>
-                    <li><a href="" target="_blank"></a> </li>
-                    <li><a href="" target="_blank"></a></li>
+                    <li><a href="" target="_blank"><img src="img/google.png" alt="google"></a> </li>
+                    <li><a href="" target="_blank"><img src="img/aple.png" alt="aple"></a></li>
                 </ul>
             </div>
             <img src="img/play.png" alt="Video">
         </div>
     </div>
-    <div>
+    <div class="page-analitics">
         <div>
             <img src="img/stat.png" alt="Video">
             <div>
@@ -179,7 +204,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="page-screen">
         <div>
             <div>
                 <div></div>
@@ -195,109 +220,137 @@
             <img src="img/stat2.png" alt="video">
         </div>
     </div>
-    <div class="page-screen">
+    <div class="page-screen-detalis">
         <h2><span>screen preview</span>Screenshot With Details</h2>
         <img src="img/stat3.png" alt="video">
     </div>
-    <div class="testimonials">
-        <div>
-            <h2><span>testimonials</span>Our Happy Clients</h2>
-            <div class="coments">
-                <div>
-                    <p>It is a long established fact that a read her will be distracted by the readable
-                        content of a page when looking.
-                    </p>
-                    <img src="img/client.png" alt="">
-                    <p class="name-client">Rolin B. Mirano<span>ceo,uihub</span></p>
-                </div>
-                <div>
-                    <p>It is a long established fact that a read her will be distracted by the readable
-                        content of a page when looking.
-                    </p>
-                    <img src="img/client.png" alt="">
-                    <p class="name-client">Rolin B. Mirano<span>ceo,uihub</span></p>
-                </div>
-                <div>
-                    <p>It is a long established fact that a read her will be distracted by the readable
-                        content of a page when looking.
-                    </p>
-                    <img src="img/client.png" alt="">
-                    <p class="name-client">Rolin B. Mirano<span>ceo,uihub</span></p>
-                </div>
+    <div class="clients">
+        <h2><span>testimonials</span>Our Happy Clients</h2>
+        <div class="page-cliens">
+            <div>
+                <p>It is a long established fact that a read her will be distracted by the readable
+                    content of a page when looking.
+                </p>
+                <img src="img/client.png" alt="">
+                <p class="name">Rolin B. Mirano</p>
+                <p class="position">ceo,uihub</p>
+            </div>
+            <div box-clients>
+                <p>It is a long established fact that a read her will be distracted by the readable
+                    content of a page when looking.
+                </p>
+                <img src="img/client.png" alt="">
+                <p class="name">Rolin B. Mirano</p>
+                <p class="position">ceo,uihub</p>
+            </div>
+            <div>
+                <p>It is a long established fact that a read her will be distracted by the readable
+                    content of a page when looking.
+                </p>
+                <img src="img/client.png" alt="">
+                <p class="name">Rolin B. Mirano</p>
+                <p class="position">ceo,uihub</p>
             </div>
         </div>
 
     </div>
-    <div class="plans">
-        <div class="box-plans">
-            <h2><span>our plans</span>Pricing Plans</h2>
-            <div class="flex-plans">
-                <div class="first-column">
-                    <h3>Free
-                        <span>starter</span>
-                        <ul>
-                            <li>Unlimited users Active</li>
-                            <li>1 GB Bandwidth Speed</li>
-                            <li>256 MB Memory Card</li>
-                            <li>Free Domain Name</li>
-                            <li>Free Hosting Name</li>
-                            <li>24x7 Online Support</li>
-                        </ul>
-                        <a href="">choose plan</a>
-                    </h3>
-                </div>
-                <div class="second-column">
-                    <h3>$90
-                        <span>/mo</span>
-                        <span>starter</span>
-                        <ul>
-                                <li>Unlimited users Active</li>
-                                <li>1 GB Bandwidth Speed</li>
-                                <li>256 MB Memory Card</li>
-                                <li>Free Domain Name</li>
-                                <li>Free Hosting Name</li>
-                                <li>24x7 Online Support</li>
-                            </ul>
-                        <a href="">choose plan</a>
-                    </h3>
-                </div>
-                <div class="third-column">
-                    <h3>$350
-                        <span>/mo</span>
-                        <span>starter</span>
-                        <ul>
-                                <li>Unlimited users Active</li>
-                                <li>1 GB Bandwidth Speed</li>
-                                <li>256 MB Memory Card</li>
-                                <li>Free Domain Name</li>
-                                <li>Free Hosting Name</li>
-                                <li>24x7 Online Support</li>
-                            </ul>
-                        <a href="">choose plan</a>
-                    </h3>
-                </div>
-
+    <div class="page-plans">
+        <h2><span>our plans</span>Pricing Plans</h2>
+        <div class="box-price-item">
+            <div>
+                <h3>Free
+                    <p>
+                        <stong>starter</stong>
+                    </p>
+                </h3>
+                <ul>
+                    <li>Unlimited users Active</li>
+                    <li>1 GB Bandwidth Speed</li>
+                    <li>256 MB Memory Card</li>
+                    <li>Free Domain Name</li>
+                    <li>Free Hosting Name</li>
+                    <li>24x7 Online Support</li>
+                </ul>
+                <a href="">choose plan</a>
+            </div>
+            <div class="active">
+                <h3><span>$</span>90
+                    <span>/mo</span>
+                    <p>
+                        <stong>starter</stong>
+                    </p>
+                </h3>
+                <ul>
+                    <li>Unlimited users Active</li>
+                    <li>1 GB Bandwidth Speed</li>
+                    <li>256 MB Memory Card</li>
+                    <li>Free Domain Name</li>
+                    <li>Free Hosting Name</li>
+                    <li>24x7 Online Support</li>
+                </ul>
+                <a href="">choose plan</a>
+            </div>
+            <div>
+                <h3><span>$</span>350
+                    <span>/mo</span>
+                        <p>
+                            <stong>starter</stong>
+                        </p>
+                </h3>
+                <ul>
+                    <li>Unlimited users Active</li>
+                    <li>1 GB Bandwidth Speed</li>
+                    <li>256 MB Memory Card</li>
+                    <li>Free Domain Name</li>
+                    <li>Free Hosting Name</li>
+                    <li>24x7 Online Support</li>
+                </ul>
+                <a href="">choose plan</a>
             </div>
         </div>
     </div>
-    <div class="team">
+    <div class="page-team">
         <div>
             <h2><span>angels</span>Our Team</h2>
-            <div class="flex-team">
-               <div>
-                   <img src="" alt="">
-                       <p><span></span></p>
-               </div>
-               <div>
-                   <img src="" alt="">
-                       <p><span></span></p>
-               </div>
-               <div>
-                   <img src="" alt="">
-                       <p><span></span></p>
-               </div>
+            <div class="box-team">
+                <div>
+                    <img src="" alt="">
+                    <p>founder</p>
+                    <p>Ricardo T. Obrien</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <p>ceo</p>
+                    <p>Alberto Del Rio</p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <p>designer</p>
+                    <p>Thomas Alva Adison</p>
+                </div>
             </div>
         </div>
+    </div>
+    <div class="page-form">
+        <h2>Start Your Free Trail No Need Credit Card.</h2>
+        <form action="">
+            <input type="text"placeholder="Enter your name here">
+            <input type="email" placeholder="Enter your email here">
+            <textarea name="textMassage" placeholder="Enter your message here"></textarea>
+        </form>
+        <button type="submit"><span></span>Submit now</button>
+    </div>
+    <div class="footer">
+        <div>
+            <p>Made With Love & Copyright By -<a href="">limpon</a></p>
+        </div>
+        <ul class="social">
+            <li><a href="" target="blank"></a></li>
+            <li><a href="" target="blank"></a></li>
+            <li><a href="" target="blank"></a></li>
+            <li><a href="" target="blank"></a></li>
+            <li><a href="" target="blank"></a></li>
+        </ul>
     </div>
 
 </body>
